<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_marginVertical="14dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">
            <ImageView
                android:id="@+id/news_image"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/empty"
                android:contentDescription="@string/articles" />
            <TextView
                android:id="@+id/newsTitle"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/titles"
                android:textSize="20sp"
                android:lines="4"
                android:textStyle="bold"
                android:ellipsize="end"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/newsDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3"
            android:paddingHorizontal="10dp"
            android:paddingBottom="10dp"
            android:ellipsize="end"
            android:text="@string/description"
            />
    </LinearLayout>
</androidx.cardview.widget.CardView>